// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangeOtherList does not render update current items when all items are complete 1`] = `
<div>
  <div
    class="form-check-inline mb-3"
  >
    <div
      class="form-check"
    >
      <input
        checked=""
        class="form-check-input"
        id="move-action-copy"
        name="copy"
        type="radio"
        value="true"
      />
      <label
        class="form-check-label"
        for="move-action-copy"
        title=""
      >
        Copy
      </label>
    </div>
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="move-action-move"
        name="move"
        type="radio"
        value="false"
      />
      <label
        class="form-check-label"
        for="move-action-move"
        title=""
      >
        Move
      </label>
    </div>
  </div>
  <div
    class="mb-3"
  >
    Choose an existing list or create a new one.
  </div>
  <button
    class="mb-3 btn btn-link"
    type="button"
  >
    Create new list
  </button>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="existingList"
    >
      Existing list
    </label>
    <select
      class="form-control"
      id="existingList"
      name="existingList"
    >
      <option
        disabled=""
        value=""
      >
        Select Existing list
      </option>
      <option
        value="1"
      >
        foobar
      </option>
    </select>
  </div>
</div>
`;

exports[`ChangeOtherList does not show choose existing list link when not existingListsOptions and showNewList 1`] = `
<div>
  <div
    class="form-check-inline mb-3"
  >
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="move-action-copy"
        name="copy"
        type="radio"
        value="false"
      />
      <label
        class="form-check-label"
        for="move-action-copy"
        title=""
      >
        Copy
      </label>
    </div>
    <div
      class="form-check"
    >
      <input
        checked=""
        class="form-check-input"
        id="move-action-move"
        name="move"
        type="radio"
        value="true"
      />
      <label
        class="form-check-label"
        for="move-action-move"
        title=""
      >
        Move
      </label>
    </div>
  </div>
  <div
    class="mb-3"
  >
    You do not have any other  Grocery Lists. Please create a new list to take this action.
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="newListName"
    >
      New list name
    </label>
    <input
      class="form-control"
      id="newListName"
      name="newListName"
      placeholder="My super cool list"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`ChangeOtherList renders only radios when not copy and not move 1`] = `
<div>
  <div
    class="form-check-inline mb-3"
  >
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="move-action-copy"
        name="copy"
        type="radio"
        value="false"
      />
      <label
        class="form-check-label"
        for="move-action-copy"
        title=""
      >
        Copy
      </label>
    </div>
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="move-action-move"
        name="move"
        type="radio"
        value="false"
      />
      <label
        class="form-check-label"
        for="move-action-move"
        title=""
      >
        Move
      </label>
    </div>
  </div>
</div>
`;

exports[`ChangeOtherList renders when copy and handle change when selected 1`] = `
<div>
  <div
    class="form-check-inline mb-3"
  >
    <div
      class="form-check"
    >
      <input
        checked=""
        class="form-check-input"
        id="move-action-copy"
        name="copy"
        type="radio"
        value="true"
      />
      <label
        class="form-check-label"
        for="move-action-copy"
        title=""
      >
        Copy
      </label>
    </div>
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="move-action-move"
        name="move"
        type="radio"
        value="false"
      />
      <label
        class="form-check-label"
        for="move-action-move"
        title=""
      >
        Move
      </label>
    </div>
  </div>
  <div
    class="mb-3"
  >
    Choose an existing list or create a new one.
  </div>
  <button
    class="mb-3 btn btn-link"
    type="button"
  >
    Create new list
  </button>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="existingList"
    >
      Existing list
    </label>
    <select
      class="form-control"
      id="existingList"
      name="existingList"
    >
      <option
        disabled=""
        value=""
      >
        Select Existing list
      </option>
      <option
        value="1"
      >
        foobar
      </option>
    </select>
  </div>
  <div
    class="mt-3 mb-3"
  >
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="updateCurrentItems"
        name="updateCurrentItems"
        type="checkbox"
      />
      <label
        class="form-check-label"
        for="updateCurrentItems"
        title=""
      >
        Would you like to also update the current items?
      </label>
    </div>
  </div>
</div>
`;

exports[`ChangeOtherList renders when move and handle change when selected 1`] = `
<div>
  <div
    class="form-check-inline mb-3"
  >
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="move-action-copy"
        name="copy"
        type="radio"
        value="false"
      />
      <label
        class="form-check-label"
        for="move-action-copy"
        title=""
      >
        Copy
      </label>
    </div>
    <div
      class="form-check"
    >
      <input
        checked=""
        class="form-check-input"
        id="move-action-move"
        name="move"
        type="radio"
        value="true"
      />
      <label
        class="form-check-label"
        for="move-action-move"
        title=""
      >
        Move
      </label>
    </div>
  </div>
  <div
    class="mb-3"
  >
    Choose an existing list or create a new one.
  </div>
  <button
    class="mb-3 btn btn-link"
    type="button"
  >
    Create new list
  </button>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="existingList"
    >
      Existing list
    </label>
    <select
      class="form-control"
      id="existingList"
      name="existingList"
    >
      <option
        disabled=""
        value=""
      >
        Select Existing list
      </option>
      <option
        value="1"
      >
        foobar
      </option>
    </select>
  </div>
</div>
`;

exports[`ChangeOtherList shows choose existing list link when existingListsOptions and correct fields when showNewList and copy 1`] = `
<div>
  <div
    class="form-check-inline mb-3"
  >
    <div
      class="form-check"
    >
      <input
        checked=""
        class="form-check-input"
        id="move-action-copy"
        name="copy"
        type="radio"
        value="true"
      />
      <label
        class="form-check-label"
        for="move-action-copy"
        title=""
      >
        Copy
      </label>
    </div>
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="move-action-move"
        name="move"
        type="radio"
        value="false"
      />
      <label
        class="form-check-label"
        for="move-action-move"
        title=""
      >
        Move
      </label>
    </div>
  </div>
  <div
    class="mb-3"
  >
    Choose an existing list or create a new one.
  </div>
  <button
    class="mb-3 btn btn-link"
    type="button"
  >
    Choose existing list
  </button>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="newListName"
    >
      New list name
    </label>
    <input
      class="form-control"
      id="newListName"
      name="newListName"
      placeholder="My super cool list"
      type="text"
      value=""
    />
  </div>
  <div
    class="mt-3 mb-3"
  >
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="updateCurrentItems"
        name="updateCurrentItems"
        type="checkbox"
      />
      <label
        class="form-check-label"
        for="updateCurrentItems"
        title=""
      >
        Would you like to also update the current items?
      </label>
    </div>
  </div>
</div>
`;

exports[`ChangeOtherList shows choose existing list link when existingListsOptions and correct fields when showNewList and move 1`] = `
<div>
  <div
    class="form-check-inline mb-3"
  >
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="move-action-copy"
        name="copy"
        type="radio"
        value="false"
      />
      <label
        class="form-check-label"
        for="move-action-copy"
        title=""
      >
        Copy
      </label>
    </div>
    <div
      class="form-check"
    >
      <input
        checked=""
        class="form-check-input"
        id="move-action-move"
        name="move"
        type="radio"
        value="true"
      />
      <label
        class="form-check-label"
        for="move-action-move"
        title=""
      >
        Move
      </label>
    </div>
  </div>
  <div
    class="mb-3"
  >
    Choose an existing list or create a new one.
  </div>
  <button
    class="mb-3 btn btn-link"
    type="button"
  >
    Choose existing list
  </button>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="newListName"
    >
      New list name
    </label>
    <input
      class="form-control"
      id="newListName"
      name="newListName"
      placeholder="My super cool list"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`ChangeOtherList shows create new list link when not showNewListForm 1`] = `
<div>
  <div
    class="form-check-inline mb-3"
  >
    <div
      class="form-check"
    >
      <input
        checked=""
        class="form-check-input"
        id="move-action-copy"
        name="copy"
        type="radio"
        value="true"
      />
      <label
        class="form-check-label"
        for="move-action-copy"
        title=""
      >
        Copy
      </label>
    </div>
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="move-action-move"
        name="move"
        type="radio"
        value="false"
      />
      <label
        class="form-check-label"
        for="move-action-move"
        title=""
      >
        Move
      </label>
    </div>
  </div>
  <div
    class="mb-3"
  >
    Choose an existing list or create a new one.
  </div>
  <button
    class="mb-3 btn btn-link"
    type="button"
  >
    Create new list
  </button>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="existingList"
    >
      Existing list
    </label>
    <select
      class="form-control"
      id="existingList"
      name="existingList"
    >
      <option
        disabled=""
        value=""
      >
        Select Existing list
      </option>
      <option
        value="1"
      >
        foobar
      </option>
    </select>
  </div>
  <div
    class="mt-3 mb-3"
  >
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="updateCurrentItems"
        name="updateCurrentItems"
        type="checkbox"
      />
      <label
        class="form-check-label"
        for="updateCurrentItems"
        title=""
      >
        Would you like to also update the current items?
      </label>
    </div>
  </div>
</div>
`;
